-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.5.0
-
None
-
3
-
11218
The mdt_save_lock() is broken and doesn't save any lock ever but simply unlock it. That happens because mti_has_trans is always 0 and is not updated upon transaction execution since commit 607905a789357a34166f34e7c992b03f5040eafc.
Another issue with mdt_save_lock is 'req' variable which can be NULL in codepath mdt_export_cleanup()>mdt_ctxt_add_dirty_flag>mdt_add_dirty_flag->mdt_object_unlock()->mdt_save_lock().
- duplicates
-
LU-4103 interop 2.5/2.6 replay-dual test_21a: Input/output error
-
- Resolved
-
-
LU-4143 MDS OOPS sanity-hsm/test_52 NULL Pointer deref: mdt_save_lock
-
- Closed
-
-
LU-4142 MDS OOPS sanity-hsm/test_52 NULL Pointer deref: mdt_save_lock
-
- Closed
-
- is related to
-
LU-4143 MDS OOPS sanity-hsm/test_52 NULL Pointer deref: mdt_save_lock
-
- Closed
-