LU-4135 mdt: restore mdt_save_lock() functionality

Missed updates for mti_has_trans cause mdt_save_lock() to do
just decref for lock and never try to save it as intended.

Patch restores updating mti_has_trans variable and fix issue
with NULL req in case of mdt_export_cleanup() codepath

Signed-off-by: Mikhail Pershin <mike.pershin@intel.com>
Change-Id: I2e4ccae018635842df1e02d72a639b0ca1fbdb04
Reviewed-on: http://review.whamcloud.com/8048
Tested-by: Hudson
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>